--- a/src/app/components/devices/edit/edit-device-modal.html
+++ b/src/app/components/devices/edit/edit-device-modal.html
@@ -21,13 +21,13 @@
 -->
 
 
-<div class="inner-content">
-  <button class="close" ng-click="closeThisDialog()">
-    <svg class="icon">
-      <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
-    </svg>
-  </button>
+<button class="close" ng-click="editDevice.modalInstance.close()">
+  <svg class="icon">
+    <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
+  </svg>
+</button>
 
+<div class="inner-content">
   <h3>Edit {{ editDevice.name }}</h3>
   <button class="button" ng-click="editDevice.remove()">Remove</button>
 </div>
