Change controller and templates to work with new modal directive.

--- a/src/app/components/services/add/new-service-modal.html
+++ b/src/app/components/services/add/new-service-modal.html
@@ -21,7 +21,7 @@
 -->
 
 
-<button class="close" ng-click="closeThisDialog()">
+<button class="close" ng-click="newService.modalInstance.close()">
   <svg class="icon">
     <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
   </svg>
