--- a/src/app/components/services/add/pairing-templates/services-add-create-discovery.html
+++ b/src/app/components/services/add/pairing-templates/services-add-create-discovery.html
@@ -34,8 +34,11 @@
 <!-- Discovered devices -->
 <p ng-show="newService.discoveredDevices.length > 0">Select your desired device/plugin.</p>
 <ul class="list" ng-show="newService.discoveredDevices.length > 0">
-  <li class="item" ng-repeat="device in newService.discoveredDevices track by $index | orderBy: 'name'" ng-click="newService.add(device)">
-    <p>{{ device.title }}, {{ device.description }}</p>
+  <li class="list__item list__item_isClickable" ng-repeat="device in newService.discoveredDevices track by $index | orderBy: 'name'" ng-click="newService.add(device)">
+    {{ device.title }}, {{ device.description }}
+    <svg class="icon">
+      <use xlink:href="./assets/svg/ui/ui.symbol.svg#plus"></use>
+    </svg>
   </li>
 </ul>
 
