Change controller and template to work with new modal directive.

--- a/src/app/components/services/edit/edit-service-modal.html
+++ b/src/app/components/services/edit/edit-service-modal.html
@@ -21,13 +21,13 @@
 -->
 
 
-<div class="inner-content">
-  <button class="close" ng-click="closeThisDialog()">
-    <svg class="icon">
-      <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
-    </svg>
-  </button>
+<button class="close" ng-click="editService.modalInstance.close()">
+  <svg class="icon">
+    <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
+  </svg>
+</button>
 
+<div class="inner-content">
   <h3>Edit {{ editService.name }}</h3>
   <button class="button" ng-click="editService.remove()">Remove</button>
 </div>
