Add some style changes.

--- a/src/app/shared/ui/form/form.scss
+++ b/src/app/shared/ui/form/form.scss
@@ -100,11 +100,7 @@ input[type="submit"] {
 
 button:disabled {
   cursor: auto;
-
-  &:hover {
-    background-color: inherit;
-    color: inherit;
-  }
+  opacity: 0.2;
 }
 
 select {
