--- a/src/assets/scss/modules/_icon.scss
+++ b/src/assets/scss/modules/_icon.scss
@@ -25,13 +25,11 @@
 
 $grey: #676767;
 
-$fill: $grey;
-
 
 .icon {
   display: block;
   @include rem(height, 1.5);
-  fill: $fill;
+  fill: $grey;
   @include rem(width, 1.5);
 }
 
