--- a/src/app/components/moods/detail/moods-detail.html
+++ b/src/app/components/moods/detail/moods-detail.html
@@ -24,7 +24,7 @@
 <guh-tabset id="device-state">
   <!-- EnterActions -->
   <guh-tab heading="ON Actions">
-    <p ng-if="mood.actions.length === 0">No actions defined.</p>
+    <p ng-if="mood.actions.length === 0">Nothing to turn ON.</p>
     <div ng-if="mood.actions.length > 0">
       <div class="action" ng-repeat="action in mood.actions track by $index">
         <p>
@@ -45,7 +45,7 @@
 
   <!-- ExitActions -->
   <guh-tab heading="OFF Actions">  
-    <p ng-if="mood.exitActions.length === 0">No actions defined.</p>
+    <p ng-if="mood.exitActions.length === 0">Nothing to turn OFF.</p>
     <div ng-if="mood.exitActions.length > 0">
       <div class="action" ng-repeat="exitAction in mood.exitActions track by $index">
         <p>
@@ -62,6 +62,29 @@
       </div>
     </div>
     <button type="button" ng-click="mood.executeExitActions()">Turn off</button>
+  </guh-tab>
+
+  <!-- Events -->
+  <guh-tab heading="Trigger">
+    <p ng-if="mood.eventDescriptors.length === 0">No triggers defined.</p>
+    <div ng-if="mood.eventDescriptors.length > 0">
+      <div ng-repeat="eventDescriptor in mood.eventDescriptors track by $index">
+        <p>{{ eventDescriptor.phrase }}{{ eventDescriptor.paramDescriptors.length > 0 ? ':' : '.' }}</p>
+        <p ng-if="eventDescriptor.paramDescriptors.length > 0" ng-repeat="paramDescriptor in eventDescriptor.paramDescriptors">{{ paramDescriptor.name }} {{ paramDescriptor.operator | operator }} {{ paramDescriptor.value }}</p>
+      </div>
+    </div>
+  </guh-tab>
+
+  <!-- States -->
+  <guh-tab heading="Conditions">
+    <p ng-if="!(mood.stateEvaluator && mood.stateEvaluator.stateDescriptor)">No conditions defined.</p>
+    <div ng-if="mood.stateEvaluator && mood.stateEvaluator.stateDescriptor">
+      <p>{{ mood.stateEvaluator.stateDescriptor.phrase }} {{ mood.stateEvaluator.stateDescriptor.operator | operator }} {{ mood.stateEvaluator.stateDescriptor.value }}.</p>
+
+      <div ng-if="mood.stateEvaluator.childEvaluators.length > 0">
+        <p ng-repeat="childEvaluator in mood.stateEvaluator.childEvaluators">{{ childEvaluator.stateDescriptor.phrase }} {{ childEvaluator.stateDescriptor.operator | operator }} {{ childEvaluator.stateDescriptor.value }}.</p>
+      </div>
+    </div>
   </guh-tab>
 </guh-tabset>
 
