Temporarily remove moods from menu.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,7 +29,7 @@
         <ul>
           <li ng-class="{ active: app.$state.includes('guh.devices') }"><a ui-sref="guh.devices.master">Devices</a></li>
           <li ng-class="{ active: app.$state.includes('guh.services') }"><a ui-sref="guh.services.master">Services</a></li>
-          <li ng-class="{ active: app.$state.includes('guh.moods') }"><a ui-sref="guh.moods.master">Moods</a></li>
+          <!-- <li ng-class="{ active: app.$state.includes('guh.moods') }"><a ui-sref="guh.moods.master">Moods</a></li> -->
         </ul>
       </nav>
 
