--- a/src/app/shared/ui/wizard/wizard.scss
+++ b/src/app/shared/ui/wizard/wizard.scss
@@ -36,6 +36,7 @@ $turquoise: #57baae;
 
 .wizard {
   &> .wizard__prev {
+    @include rem(height, 4.5);
     position: absolute;
       @include rem(left, 1.5);
       @include rem(top, 1.5);
