--- a/src/app/components/devices/detail/device-class-templates/device-class-hue-bridge.html
+++ b/src/app/components/devices/detail/device-class-templates/device-class-hue-bridge.html
@@ -39,7 +39,7 @@
   </guh-tab>
 
   <!-- Settings -->
-  <guh-tab heading="Settigs">
+  <guh-tab heading="Settings">
     <p ng-if="device.params.length === 0">This device doesn't have any settings to show you.</p>
     <div ng-repeat="param in device.params track by $index" class="param">
       <p class="name">{{ param.name }}</p>
