--- a/src/app/components/services/detail/device-class-templates/device-class-kodi.html
+++ b/src/app/components/services/detail/device-class-templates/device-class-kodi.html
@@ -42,7 +42,7 @@
   </guh-tab>
 
   <!-- Settings -->
-  <guh-tab heading="Settigs">
+  <guh-tab heading="Settings">
     <p ng-if="service.params.length === 0">This service doesn't have any settings to show you.</p>
     <div ng-repeat="param in service.params track by $index" class="param">
       <p class="name">{{ param.name }}</p>
