Add missing or not working units in templates.

--- a/src/app/components/moods/add/add-action.html
+++ b/src/app/components/moods/add/add-action.html
@@ -56,6 +56,7 @@
       <guh-form-field label="{{ paramType.name }}"
                       name="{{ paramType.name }}"
                       param-type="paramType"
+                      state="addAction.currentState"
                       template="{{ paramType.inputTemplateUrl }}"
                       ng-repeat="paramType in addAction.currentActionType.paramTypes track by $index"></guh-form-field>
 
