--- a/src/assets/scss/modules/_event.scss
+++ b/src/assets/scss/modules/_event.scss
@@ -23,78 +23,26 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-/*
- * Libraries
- *
- */
+$grey: #676767;
 
-@import "bourbon";
+$color: $grey;
 
 
-/*
- * App SASS
- *
- */
+.event {
+  @include rem(margin-bottom, 1.5);
 
-@import "../assets/scss/functions";
-@import "../assets/scss/mixins";
-@import "../assets/scss/variables";
+  .value {
+    color: $color;
+    @include rem(font-size, 1.2);
+    @include rem(line-height, 1.5);
+  }
 
-
-/*
- * Grid
- *
- */
-
-@import "../assets/scss/grid/grid";
-
-
-/*
- * Base & Layout
- *
- */
-
-@import "../assets/scss/base/reset";
-@import "../assets/scss/base/base";
-
-@import "../assets/scss/layout/header";
-@import "../assets/scss/layout/content";
-
-
-/*
- * Modules
- *
- */
-
-@import "../assets/scss/modules/action";
-@import "../assets/scss/modules/button";
-@import "../assets/scss/modules/container";
-@import "../assets/scss/modules/content";
-@import "../assets/scss/modules/event";
-@import "../assets/scss/modules/heading";
-@import "../assets/scss/modules/hotkeys";
-@import "../assets/scss/modules/icon";
-@import "../assets/scss/modules/list";
-@import "../assets/scss/modules/loading";
-@import "../assets/scss/modules/overlay";
-@import "../assets/scss/modules/param";
-@import "../assets/scss/modules/state";
-
-
-/*
- * Components (Shared UI)
- */
-
-@import "../app/shared/ui/action-bar/action-bar";
-@import "../app/shared/ui/button-group/button-group";
-@import "../app/shared/ui/color/color";
-@import "../app/shared/ui/form/form";
-@import "../app/shared/ui/line-chart/line-chart";
-@import "../app/shared/ui/morph-modal/morph-modal";
-@import "../app/shared/ui/range/range";
-@import "../app/shared/ui/remote-navigation/remote-navigation";
-@import "../app/shared/ui/remote-fn/remote-fn";
-@import "../app/shared/ui/remote-player/remote-player";
-@import "../app/shared/ui/slider/slider";
-@import "../app/shared/ui/wizard/wizard";
-@import "../app/shared/ui/tabs/tabs";
+  .name {
+    color: rgba($color, 0.6);
+    @include rem(font-size, 0.8);
+    // letter-spacing: 0.2em;
+    @include rem(line-height, 1.5);
+    // @include rem(margin, 0.2, 0, 1.3);
+    text-transform: uppercase;
+  }
+}
